force-app/main/default/objects/Opportunity/fields/Additional_Partners__c.field-meta.xml
<CustomField>
    <fullName>Additional_Partners__c</fullName>
    <inlineHelpText>Enter additional opportunity partners.</inlineHelpText>
    <label>Additional Partners</label>
    <type>TextArea</type>
</CustomField>