force-app/main/default/objects/Opportunity/fields/Additional_Support__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support__c</fullName>
    <inlineHelpText>Enter any additional support (capture, solution, proposal, analyst).</inlineHelpText>
    <label>Additional Support</label>
    <type>TextArea</type>
</CustomField>