force-app/main/default/objects/Opportunity/fields/Award_Price__c.field-meta.xml
<CustomField>
    <fullName>Award_Price__c</fullName>
    <inlineHelpText>Enter awarded contract value.</inlineHelpText>
    <label>Award Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>