force-app/main/default/objects/Opportunity/fields/Awardee_Sub__c.field-meta.xml
<CustomField>
    <fullName>Awardee_Sub__c</fullName>
    <label>Awardee Sub</label>
    <length>128</length>
    <type>Text</type>
</CustomField>