force-app/main/default/objects/Opportunity/fields/B3_Price__c.field-meta.xml
<CustomField>
    <fullName>B3_Price__c</fullName>
    <inlineHelpText>Enter our proposed contract value.</inlineHelpText>
    <label>Evaluated Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>