force-app/main/default/objects/Opportunity/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <inlineHelpText>Select bid status.</inlineHelpText>
    <label>Bid Decision?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>No BId</fullName>
                <label>No Bid</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>