force-app/main/default/objects/Opportunity/fields/Closed_Not_Bid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Not_Bid_Reason__c</fullName>
    <inlineHelpText>Enter reason for Closed Not Bid selection. Otherwise leave blank.</inlineHelpText>
    <label>Closed Not Bid Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>