force-app/main/default/objects/Opportunity/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <inlineHelpText>Select any choices that reflect core competency/capability.</inlineHelpText>
    <label>COE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Clinical / Health IT</fullName>
            </value>
            <value>
                <fullName>Cloud/Infrastructure</fullName>
                <label>Cloud / Infrastructure</label>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>DEV OPS/Agile</fullName>
                <label>DEV OPS / Agile</label>
            </value>
            <value>
                <fullName>Data and Analysis</fullName>
                <label>Data and Analytics</label>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>