force-app/main/default/objects/Opportunity/fields/Competitive_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Procedure__c</fullName>
    <inlineHelpText>Select the competition type for this contract.</inlineHelpText>
    <label>Acquisition Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>SDVOSB</fullName>
            </value>
            <value>
                <fullName>HUBZone</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Full and Open</fullName>
            </value>
            <value>
                <fullName>WOSB</fullName>
            </value>
            <value>
                <fullName>8a</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>