force-app/main/default/objects/Opportunity/fields/Contracting_Officer__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter assigned Contracting Officer.</inlineHelpText>
    <label>Contracting Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contracting Officer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>