force-app/main/default/objects/Opportunity/fields/Contracting_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter assigned Contracting Specialist supporting the CO.</inlineHelpText>
    <label>Contracting Specialist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contracting Specialist)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>