force-app/main/default/objects/Opportunity/fields/Customer_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Knowledge__c</fullName>
    <inlineHelpText>Select degree of knowledge on customer.</inlineHelpText>
    <label>Customer Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(0) No knowledge of customer</fullName>
                <default>true</default>
                <label>(0) No knowledge of customer</label>
            </value>
            <value>
                <fullName>(1) Some knowledge of customer</fullName>
            </value>
            <value>
                <fullName>(3) Customer knows of our team</fullName>
            </value>
            <value>
                <fullName>(5) Know the customer well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>