force-app/main/default/objects/Opportunity/fields/Date_of_Award__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Award__c</fullName>
    <inlineHelpText>Enter date the contract is awarded.</inlineHelpText>
    <label>Date of Award</label>
    <type>Date</type>
</CustomField>