force-app/main/default/objects/Opportunity/fields/Date_of_Bid_No_Bid_Decision__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Bid_No_Bid_Decision__c</fullName>
    <inlineHelpText>Enter date that the Bids/No-Bid decision is made.</inlineHelpText>
    <label>Date of Bid/No Bid Decision</label>
    <type>Date</type>
</CustomField>