force-app/main/default/objects/Opportunity/fields/Date_of_Gate_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Gate_Review__c</fullName>
    <inlineHelpText>Enter date and time of opportunity Gate Review.</inlineHelpText>
    <label>Date of Gate Review</label>
    <type>DateTime</type>
</CustomField>