force-app/main/default/objects/Opportunity/fields/IDIQ_ID__c.field-meta.xml
<CustomField>
    <fullName>IDIQ_ID__c</fullName>
    <label>IDIQ ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>