force-app/main/default/objects/Opportunity/fields/Incumbent_Prime__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Prime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If re-competing, enter previous incumbent company.</inlineHelpText>
    <label>Incumbent Prime</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Incumbent Prime)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>