force-app/main/default/objects/Opportunity/fields/Incumbent_Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Sub_Contractor__c</fullName>
    <inlineHelpText>If re-competing, enter previous sub.</inlineHelpText>
    <label>Incumbent Sub Contractor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>