force-app/main/default/objects/Opportunity/fields/INPT_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>INPT_Award_Date__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ estimated Opportunity award date.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ estimated Opportunity award date.</inlineHelpText>
    <label>IQ Award Date (Deltek Estimate)</label>
    <type>Date</type>
</CustomField>