force-app/main/default/objects/Opportunity/fields/INPT_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>INPT_Estimated_Value__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the estimated contract value of the GovWin IQ Opportunity.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the estimated contract value of the GovWin IQ Opportunity.</inlineHelpText>
    <label>IQ Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>