force-app/main/default/objects/Opportunity/fields/INPT_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>INPT_Opportunity_Type__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the Opportunity type as either a tracked opportunity or bid or lead or TOON or OM opp.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the Opportunity type as either a tracked opportunity or bid or lead or TOON or OM opp.</inlineHelpText>
    <label>IQ Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tracked Opportunity</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>TOON</fullName>
            </value>
            <value>
                <fullName>OM Opportunity</fullName>
            </value>
            <value>
                <fullName>FBO Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>