force-app/main/default/objects/Opportunity/fields/INPT_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>INPT_Response_Date__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ estimated Opportunity response date. This date applies only to TOONS.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ estimated Opportunity response date. This date applies only to TOONS.</inlineHelpText>
    <label>IQ Response Date (Deltek Estimate)</label>
    <type>Date</type>
</CustomField>