force-app/main/default/objects/Opportunity/fields/INPT_RFP_Date__c.field-meta.xml
<CustomField>
    <fullName>INPT_RFP_Date__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ estimated Opportunity Solicitation date.</description>
    <inlineHelpText>This field is used by the GovWin IQ Connector. This field defines the GovWin IQ estimated Opportunity Solicitation date.</inlineHelpText>
    <label>IQ Solicitation Date (Deltek Estimate)</label>
    <type>Date</type>
</CustomField>