force-app/main/default/objects/Opportunity/fields/Link_to_GovWin__c.field-meta.xml
<CustomField>
    <fullName>Link_to_GovWin__c</fullName>
    <inlineHelpText>For external link to GovWin solicitation.</inlineHelpText>
    <label>Link to GovWin</label>
    <type>Url</type>
</CustomField>