force-app/main/default/objects/Opportunity/fields/Link_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Opportunity__c</fullName>
    <inlineHelpText>For external link to opportunity solicitation.</inlineHelpText>
    <label>Link to Opportunity</label>
    <type>Url</type>
</CustomField>