force-app/main/default/objects/Opportunity/fields/Link_to_SharePoint__c.field-meta.xml
<CustomField>
    <fullName>Link_to_SharePoint__c</fullName>
    <inlineHelpText>For external link to SharePoint site.</inlineHelpText>
    <label>Link to SharePoint</label>
    <type>Url</type>
</CustomField>