force-app/main/default/objects/Opportunity/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <inlineHelpText>Enter NAICS code of the opportunity.</inlineHelpText>
    <label>NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>