force-app/main/default/objects/Opportunity/fields/Opportunity_Scope__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Scope__c</fullName>
    <inlineHelpText>Add details of opportunity, found in the PWS/SOW.</inlineHelpText>
    <label>Opportunity Scope</label>
    <type>TextArea</type>
</CustomField>