force-app/main/default/objects/Opportunity/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <inlineHelpText>Select the contracting organization.</inlineHelpText>
    <label>Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>DoD</fullName>
            </value>
            <value>
                <fullName>USPTO</fullName>
            </value>
            <value>
                <fullName>HUD</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>