force-app/main/default/objects/Opportunity/fields/Organizational_Impact__c.field-meta.xml
<CustomField>
    <fullName>Organizational_Impact__c</fullName>
    <inlineHelpText>Select degree of impact on the company.</inlineHelpText>
    <label>Organizational Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(0) High impact on B3 resources</fullName>
                <default>true</default>
                <label>(0) High impact on B3 resources</label>
            </value>
            <value>
                <fullName>(1) Average impact on B3 resources</fullName>
            </value>
            <value>
                <fullName>(2) Minimal impact on B3 resources</fullName>
            </value>
            <value>
                <fullName>(3) No impact on B3 resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>