force-app/main/default/objects/Opportunity/fields/Other_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Loss_Reason__c</fullName>
    <inlineHelpText>Enter other loss reason. Otherwise leave blank.</inlineHelpText>
    <label>Other Loss Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>