force-app/main/default/objects/Opportunity/fields/Other_Organization__c.field-meta.xml
<CustomField>
    <fullName>Other_Organization__c</fullName>
    <inlineHelpText>Enter other organization. Otherwise leave blank.</inlineHelpText>
    <label>Other Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>