force-app/main/default/objects/Opportunity/fields/Our_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Our_Contract_Value__c</fullName>
    <inlineHelpText>Enter our estimated contract amount.</inlineHelpText>
    <label>Our Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>