force-app/main/default/objects/Opportunity/fields/Our_FTEs__c.field-meta.xml
<CustomField>
    <fullName>Our_FTEs__c</fullName>
    <inlineHelpText>Enter number of our FTEs in contract.</inlineHelpText>
    <label>Our FTEs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>