force-app/main/default/objects/Opportunity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select partner account for opportunity.</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Partner(s))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>