force-app/main/default/objects/Opportunity/fields/PoP__c.field-meta.xml
<CustomField>
    <fullName>PoP__c</fullName>
    <description>Months in Period of Performance</description>
    <label>PoP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>