force-app/main/default/objects/Opportunity/fields/PoP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PoP_End_Date__c</fullName>
    <label>PoP_End_Date</label>
    <type>Date</type>
</CustomField>