force-app/main/default/objects/Opportunity/fields/PoP_Months__c.field-meta.xml
<CustomField>
    <fullName>PoP_Months__c</fullName>
    <inlineHelpText>Enter period of performance / duration of contract in months.</inlineHelpText>
    <label>PoP (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>