force-app/main/default/objects/Opportunity/fields/Previous_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Award_Amount__c</fullName>
    <description>Amount of the Previous version of this contract</description>
    <inlineHelpText>If re-competing, enter previous award contract value.</inlineHelpText>
    <label>Previous Award Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>