force-app/main/default/objects/Opportunity/fields/Previous_Award_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Award_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If re-competing, enter previous award ID</inlineHelpText>
    <label>Previous Solicitation Number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>