force-app/main/default/objects/Opportunity/fields/Prime_Sub__c.field-meta.xml
<CustomField>
    <fullName>Prime_Sub__c</fullName>
    <inlineHelpText>Select the company&apos;s role.</inlineHelpText>
    <label>Prime / Sub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Sub</fullName>
            </value>
            <value>
                <fullName>JV</fullName>
            </value>
            <value>
                <fullName>Protégé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>