force-app/main/default/objects/Opportunity/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Select priority level of the opportunity.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Do Not Bid</fullName>
                <isActive>false</isActive>
                <label>Do Not Bid</label>
            </value>
            <value>
                <fullName>FY19 Priority</fullName>
                <isActive>false</isActive>
                <label>FY19 Priority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>