force-app/main/default/objects/Opportunity/fields/Projected_Start__c.field-meta.xml
<CustomField>
    <fullName>Projected_Start__c</fullName>
    <label>Projected Start</label>
    <type>Date</type>
</CustomField>