force-app/main/default/objects/Opportunity/fields/Proposal_Due_Time__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Due_Time__c</fullName>
    <inlineHelpText>Enter time of when the proposal is due.</inlineHelpText>
    <label>RFP/Proposal Due Time</label>
    <type>Time</type>
</CustomField>