force-app/main/default/objects/Opportunity/fields/Proposal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter opportunity Proposal Manager.</inlineHelpText>
    <label>Proposal Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Proposal_Manager)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>