force-app/main/default/objects/Opportunity/fields/Pursue_Decision__c.field-meta.xml
<CustomField>
    <fullName>Pursue_Decision__c</fullName>
    <inlineHelpText>Select pursue decision for contract.</inlineHelpText>
    <label>Pursue Decision?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pursue</fullName>
            </value>
            <value>
                <fullName>No Pursue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>