force-app/main/default/objects/Opportunity/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>FYQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY17Q1</fullName>
            </value>
            <value>
                <fullName>FY17Q2</fullName>
            </value>
            <value>
                <fullName>FY17Q3</fullName>
            </value>
            <value>
                <fullName>FY17Q4</fullName>
            </value>
            <value>
                <fullName>FY18Q1</fullName>
            </value>
            <value>
                <fullName>FY18Q2</fullName>
            </value>
            <value>
                <fullName>FY18Q3</fullName>
            </value>
            <value>
                <fullName>FY18Q4</fullName>
            </value>
            <value>
                <fullName>FY19Q1</fullName>
            </value>
            <value>
                <fullName>FY19Q2</fullName>
            </value>
            <value>
                <fullName>FY19Q3</fullName>
            </value>
            <value>
                <fullName>FY19Q4</fullName>
            </value>
            <value>
                <fullName>FY20Q1</fullName>
            </value>
            <value>
                <fullName>FY20Q2</fullName>
            </value>
            <value>
                <fullName>FY20Q3</fullName>
            </value>
            <value>
                <fullName>FY20Q4</fullName>
            </value>
            <value>
                <fullName>FY21Q1</fullName>
            </value>
            <value>
                <fullName>FY21Q2</fullName>
            </value>
            <value>
                <fullName>FY21Q3</fullName>
            </value>
            <value>
                <fullName>FY21Q4</fullName>
            </value>
            <value>
                <fullName>FY22Q1</fullName>
            </value>
            <value>
                <fullName>FY22Q2</fullName>
            </value>
            <value>
                <fullName>FY22Q3</fullName>
            </value>
            <value>
                <fullName>FY22Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>