force-app/main/default/objects/Opportunity/fields/Recompete__c.field-meta.xml
<CustomField>
    <fullName>Recompete__c</fullName>
    <inlineHelpText>Select whether this is a new contract or a re-compete.</inlineHelpText>
    <label>Recompete?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>